--- a/secciones/trailers.html
+++ b/secciones/trailers.html
@@ -12,14 +12,18 @@
 </head>
 <body class="sections">
    
-    <div class="nav1"><a href="../index.html"><img src="../media/icons/index.png" alt="index" class="imgnav"></a></div>
-    <div class="nav2"><a href="../secciones/classics.html"><img src="../media/icons/classics.png" alt="classics" class="imgnav"></a>
-    </div>
-    <div class="nav3"><a href="../secciones/noticias.html"><img src="../media/icons/noticias.png" alt="noticias" class="imgnav"></a>
-    </div>
-    <div class="nav4"><a href="../secciones/gang.html"><img src="../media/icons/gang.png" alt="gang" class="imgnav"></a></div>
-    <div class="nav5"><a href="../secciones/trailers.html"><img src="../media/icons/trailers.png" alt="trailers" class="imgnav"></a>
-    </div>
+    <div class="dropdown">
+        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Trailers
+        </a>
+      
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" href="../index.html">HOME</a>
+          <a class="dropdown-item" href="../secciones/classics.html">Classics</a>
+          <a class="dropdown-item" href="../secciones/noticias.html">Noticias</a>
+          <a class="dropdown-item" href="../secciones/gang.html">Sé parte</a>
+        </div>
+      </div>
 
     <div class="mainst1">
         <h1>¡Trailers que te llenarán de adrenalina el cuerpo!</h1><br>
@@ -64,6 +68,8 @@
     </footer>
 
 
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
