--- a/index.html
+++ b/index.html
@@ -2,100 +2,128 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilos/style.css">
-    <link rel="stylesheet" href="estilos/mediastyle.css">
-    <title>Old School Geek</title>
-    <link rel="shortcut icon" href="./media/icons/favicon.png">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+  <link rel="stylesheet" href="estilos/estilos.css">
+  <link rel="stylesheet" href="estilos/mediastyle.css">
+  <title>Old School Geek</title>
+  <link rel="shortcut icon" href="./media/icons/favicon.png">
 </head>
 
 <body class="bodyindex">
 
-    <!-- linea de nav -->
+  <!-- linea de nav -->
 
-    <div class="dropdown">
-        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          HOME
-        </a>
-      
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item" href="./secciones/classics.html">Classics</a>
-          <a class="dropdown-item" href="./secciones/noticias.html">Noticias</a>
-          <a class="dropdown-item" href="./secciones/gang.html">Sé parte</a>
-          <a class="dropdown-item" href="./secciones/trailers.html">Trailers</a>
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <div class="container-fluid">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" href="./index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./secciones/classics.html">Clásicos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./secciones/noticias.html">Noticias</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./secciones/trailers.html">Trailers</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./secciones/gang.html">Sé parte</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <section class="head">
+    <div></div>
+
+  </section>
+
+  <section class="main2">
+    <div>
+      <h1>Bienvenidos a Old School Geeks</h1>
+      <p>Le damos la bienvenida a todas las personas que se interesen en el mundo geek. Si te gustan las
+        peliculas,
+        nuevas o clásicas, los juegos, las series, estás en el lugar indicado. Aquí reseñaremos y recomendaremos
+        todo tipo de juegos, series, películas para todos ustedes, fanáticos del terror, de lo casual, de la
+        comedia, de la acción, del deporte.</p><br>
+      <div class="minigallery">
+        <div><img src="https://i.pinimg.com/originals/3b/54/6b/3b546b85681a155e9159ea3a440d0a29.png" alt="eva"
+            class="eva"><br>
+          <p>descripcion de eva</p>
         </div>
+        <div><img src="https://wallpaperaccess.com/full/3552000.jpg" alt="godzilla" class="godz"><br>
+          <p>descripcion de godzilla</p>
+        </div>
+
       </div>
-      
-    <section class="head">
-        <div></div>
+    </div>
+  </section>
+  <section class="main3">
+    <h2>¡Recomendaciones de Gamers que les resultarán interesantes!</h2><br>
+    <div>
+      <h3>Markiplier</h3>
+      <p>Reconocido a nivel mundial por la tremenda voz que posee, se deja querer muchisimo por sus fans por ser una
+        persona muy simpatico y divertido. súper recomendable su canal con sus gameplays y las series que ha creado
+        juntos a sus amigos</p><br>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/LOsaaOn8P3c" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+    </div>
+    <div>
+      <h3>Gamesprout</h3>
+      <p>Gran página si lo que te interesa es lelvarte un momento lleno de risa y diversión y preguntas filosóficas de
+        como llego eso ahí. La página fue creada en 2008 por dos amigos y desde entonces no paro de crecer; suben videos
+        a sus diversas secciones a diario práctiamente. </p> <br>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/R4CkXmsuJek" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+    </div>
 
-    </section>
+  </section>
 
-    <section class="main2">
-        <div>
-            <h1>Bienvenidos a Old School Geeks</h1>
-            <p>Le damos la bienvenida a todas las personas que se interesen en el mundo geek. Si te gustan las
-                peliculas,
-                nuevas o clásicas, los juegos, las series, estás en el lugar indicado. Aquí reseñaremos y recomendaremos
-                todo tipo de juegos, series, películas para todos ustedes, fanáticos del terror, de lo casual, de la
-                comedia, de la acción, del deporte.</p><br>
-            <div class="minigallery">
-                <div><img src="https://i.pinimg.com/originals/3b/54/6b/3b546b85681a155e9159ea3a440d0a29.png" alt="eva" class="eva"><br>
-                    <p>descripcion de eva</p>
-                </div>
-                <div><img src="https://wallpaperaccess.com/full/3552000.jpg" alt="godzilla" class="godz"><br>
-                    <p>descripcion de godzilla</p>
-                </div>
+  <section class="galeria">
+    <h2>Galeria</h2>
+   <!-- Carousel -->
+<div id="demo" class="carousel slide" data-bs-ride="carousel">
 
-            </div>
-        </div>
-    </section>
-    <section class="main3">
-        <h2>¡Recomendaciones de Gamers que les resultarán interesantes!</h2><br>
-        <div>
-            <h3>Markiplier</h3>
-            <p>Reconocido a nivel mundial por la tremenda voz que posee, se deja querer muchisimo por sus fans por ser una persona muy simpatico y divertido. súper recomendable su canal con sus gameplays y las series que ha creado juntos a sus amigos</p><br>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/LOsaaOn8P3c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-        <div>
-            <h3>Gamesprout</h3>
-            <p>Gran página si lo que te interesa es lelvarte un momento lleno de risa y diversión y preguntas filosóficas de como llego eso ahí. La página fue creada en 2008 por dos amigos y desde entonces no paro de crecer; suben videos a sus diversas secciones a diario práctiamente. </p> <br>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/R4CkXmsuJek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-
-    </section>
-
-    <section class="galeria">
-        <h2>Galeria</h2>
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="https://wallpapercave.com/wp/wp2928790.jpg" class="d-block w-100" alt="assassins" width="1361px" height="1024px">
-              </div>
-              <div class="carousel-item">
-                <img src="https://images2.alphacoders.com/752/thumb-1920-75210.jpg" class="d-block w-100" alt="deadspace" width="1361px" height="1024px">
-              </div>
-              <div class="carousel-item">
-                <img src="https://wallpaper.dog/large/5463491.jpg" class="d-block w-100" alt="gaming" width="1361px" height="1024px">
-              </div>
-              <div class="carousel-item">
-                <img src="https://wallpapercave.com/wp/wp2215729.jpg" class="d-block w-100" alt="witcher" width="1361px" height="1024px">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-
-    </section>
+  <!-- Indicators/dots -->
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+  </div>
+  
+  <!-- The slideshow/carousel -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://wallpapercave.com/wp/wp2928790.jpg" alt="Assasins" class="d-block" style="width:100%">
+    </div>
+    <div class="carousel-item">
+      <img src="https://images2.alphacoders.com/752/thumb-1920-75210.jpg" alt="pic2" class="d-block" style="width:100%">
+    </div>
+    <div class="carousel-item">
+      <img src="https://wallpaper.dog/large/5463491.jpg" alt="pic3" class="d-block" style="width:100%">
+    </div>
+  </div>
+  
+  <!-- Left and right controls/icons -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
+  </section>
 
 
 
@@ -114,19 +142,17 @@
 
 
 
-    <footer>
-        <address>
-            Alumno: Vera Lucas Ariel <br>
-            Contacto: veralucas@example.com
-        </address>
-
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    </footer>
+  <footer>
+    <address>
+      Alumno: Vera Lucas Ariel <br>
+      Contacto: veralucas@example.com
+    </address>
+  </footer>
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
