--- a/secciones/noticias.html
+++ b/secciones/noticias.html
@@ -14,19 +14,27 @@
 
 <body class="sections">
 
-    <div class="dropdown">
-        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Noticias
-        </a>
-      
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item" href="../index.html">HOME</a>
-          <a class="dropdown-item" href="../secciones/classics.html">Classics</a>
-          <a class="dropdown-item" href="../secciones/gang.html">Sé parte</a>
-          <a class="dropdown-item" href="../secciones/trailers.html">Trailers</a>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/classics.html">Clásicos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/noticias.html">Noticias</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/trailers.html">Trailers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/gang.html">Sé parte</a>
+            </li>
+          </ul>
         </div>
-      </div>
-
+      </nav>
     <div class="mainst1">
         <h1>¡Actualidad para que no pierdas nada de vista!</h1><br>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique excepturi ratione minima nobis
