--- a/secciones/trailers.html
+++ b/secciones/trailers.html
@@ -12,19 +12,27 @@
 </head>
 <body class="sections">
    
-    <div class="dropdown">
-        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Trailers
-        </a>
-      
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          <a class="dropdown-item" href="../index.html">HOME</a>
-          <a class="dropdown-item" href="../secciones/classics.html">Classics</a>
-          <a class="dropdown-item" href="../secciones/noticias.html">Noticias</a>
-          <a class="dropdown-item" href="../secciones/gang.html">Sé parte</a>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/classics.html">Clásicos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/noticias.html">Noticias</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/trailers.html">Trailers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/gang.html">Sé parte</a>
+            </li>
+          </ul>
         </div>
-      </div>
-
+      </nav>
     <div class="mainst1">
         <h1>¡Trailers que te llenarán de adrenalina el cuerpo!</h1><br>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe id aliquam, distinctio, tenetur fugit velit temporibus, earum labore et quia assumenda suscipit impedit debitis deserunt voluptas facere repellat veniam eaque? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore impedit vel inventore asperiores expedita voluptate dolorum aperiam minus, exercitationem, libero quo ea ipsum at cum perspiciatis? Praesentium illum est suscipit! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum minus culpa, officia libero eveniet excepturi repudiandae nemo mollitia quia iure deleniti sapiente pariatur voluptatem minima quis architecto. Culpa, voluptates nobis.</p>
