--- a/secciones/trailers.html
+++ b/secciones/trailers.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../estilos/style.css">
+    <link rel="stylesheet" href="../estilos/estilos.css">
     <link rel="stylesheet" href="../estilos/mediastyle.css">
     <title>Old School Geek</title>
     <link rel="shortcut icon" href="../media/icons/favicon.png">
 </head>
-<body class="sections">
+<body>
    
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="../index.html">Home</a>
+              <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../secciones/classics.html">Clásicos</a>
@@ -25,7 +25,7 @@
               <a class="nav-link" href="../secciones/noticias.html">Noticias</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../secciones/trailers.html">Trailers</a>
+              <a class="nav-link active" href="../secciones/trailers.html">Trailers</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../secciones/gang.html">Sé parte</a>
@@ -33,7 +33,12 @@
           </ul>
         </div>
       </nav>
-    <div class="mainst1">
+
+      <div class="container mt-3">
+        <img src="../media/icons/trailers.png" alt="trailers"  class="mx-auto d-block">
+      </div>
+
+    <div class="container-fluid">
         <h1>¡Trailers que te llenarán de adrenalina el cuerpo!</h1><br>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe id aliquam, distinctio, tenetur fugit velit temporibus, earum labore et quia assumenda suscipit impedit debitis deserunt voluptas facere repellat veniam eaque? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore impedit vel inventore asperiores expedita voluptate dolorum aperiam minus, exercitationem, libero quo ea ipsum at cum perspiciatis? Praesentium illum est suscipit! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum minus culpa, officia libero eveniet excepturi repudiandae nemo mollitia quia iure deleniti sapiente pariatur voluptatem minima quis architecto. Culpa, voluptates nobis.</p>
     </div>
