--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="shortcut icon" href="./media/icons/favicon.png">
 </head>
 
-<body class="bodyindex">
+<body>
 
   <!-- linea de nav -->
 
@@ -42,87 +42,86 @@
     </div>
   </nav>
 
-  <section class="head">
-    <div></div>
+  <div class="container mt-3">
+    <img src="./media/icons/bienvenida.png" alt="bienvenida" class="mx-auto d-block">
+  </div>
 
-  </section>
 
-  <section class="main2">
-    <div>
-      <h1>Bienvenidos a Old School Geeks</h1>
-      <p>Le damos la bienvenida a todas las personas que se interesen en el mundo geek. Si te gustan las
-        peliculas,
-        nuevas o clásicas, los juegos, las series, estás en el lugar indicado. Aquí reseñaremos y recomendaremos
-        todo tipo de juegos, series, películas para todos ustedes, fanáticos del terror, de lo casual, de la
-        comedia, de la acción, del deporte.</p><br>
-      <div class="minigallery">
-        <div><img src="https://i.pinimg.com/originals/3b/54/6b/3b546b85681a155e9159ea3a440d0a29.png" alt="eva"
-            class="eva"><br>
-          <p>descripcion de eva</p>
-        </div>
-        <div><img src="https://wallpaperaccess.com/full/3552000.jpg" alt="godzilla" class="godz"><br>
-          <p>descripcion de godzilla</p>
-        </div>
 
-      </div>
-    </div>
-  </section>
-  <section class="main3">
-    <h2>¡Recomendaciones de Gamers que les resultarán interesantes!</h2><br>
-    <div>
+  <div class="container">
+    <h1>Bienvenidos a Old School Geeks</h1>
+    <p>Le damos la bienvenida a todas las personas que se interesen en el mundo geek. Si te gustan las
+      peliculas,
+      nuevas o clásicas, los juegos, las series, estás en el lugar indicado. Aquí reseñaremos y recomendaremos
+      todo tipo de juegos, series, películas para todos ustedes, fanáticos del terror, de lo casual, de la
+      comedia, de la acción, del deporte.</p>
+  </div>
+
+
+<h2 class="container">¡Recomendaciones de Gamers que les resultarán interesantes!</h2><br>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col">
       <h3>Markiplier</h3>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/LOsaaOn8P3c" title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
       <p>Reconocido a nivel mundial por la tremenda voz que posee, se deja querer muchisimo por sus fans por ser una
         persona muy simpatico y divertido. súper recomendable su canal con sus gameplays y las series que ha creado
-        juntos a sus amigos</p><br>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/LOsaaOn8P3c" title="YouTube video player"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+        juntos a sus amigos</p>
     </div>
-    <div>
+    <div class="col"></div>
+    <div class="col">
       <h3>Gamesprout</h3>
-      <p>Gran página si lo que te interesa es lelvarte un momento lleno de risa y diversión y preguntas filosóficas de
-        como llego eso ahí. La página fue creada en 2008 por dos amigos y desde entonces no paro de crecer; suben videos
-        a sus diversas secciones a diario práctiamente. </p> <br>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/R4CkXmsuJek" title="YouTube video player"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+      <p>Gran página si lo que te interesa es lelvarte un momento lleno de risa y diversión y preguntas filosóficas de
+        como llego eso ahí. La página fue creada en 2008 por dos amigos y desde entonces no paro de crecer; suben
+        videos
+        a sus diversas secciones a diario práctiamente.</p>
     </div>
-
-  </section>
-
-  <section class="galeria">
-    <h2>Galeria</h2>
-   <!-- Carousel -->
-<div id="demo" class="carousel slide" data-bs-ride="carousel">
-
-  <!-- Indicators/dots -->
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-    <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+   
   </div>
-  
-  <!-- The slideshow/carousel -->
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://wallpapercave.com/wp/wp2928790.jpg" alt="Assasins" class="d-block" style="width:100%">
-    </div>
-    <div class="carousel-item">
-      <img src="https://images2.alphacoders.com/752/thumb-1920-75210.jpg" alt="pic2" class="d-block" style="width:100%">
-    </div>
-    <div class="carousel-item">
-      <img src="https://wallpaper.dog/large/5463491.jpg" alt="pic3" class="d-block" style="width:100%">
-    </div>
-  </div>
-  
-  <!-- Left and right controls/icons -->
-  <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </button>
 </div>
+
+<h2 class="container">Galeria</h2>
+  <section class="galeria">
+   
+    <!-- Carousel -->
+    <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+      <!-- Indicators/dots -->
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+      </div>
+
+      <!-- The slideshow/carousel -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://wallpapercave.com/wp/wp2928790.jpg" alt="Assasins" class="d-block" style="width:100%">
+        </div>
+        <div class="carousel-item">
+          <img src="https://images2.alphacoders.com/752/thumb-1920-75210.jpg" alt="pic2" class="d-block"
+            style="width:100%">
+        </div>
+        <div class="carousel-item">
+          <img src="https://wallpaper.dog/large/5463491.jpg" alt="pic3" class="d-block" style="width:100%">
+        </div>
+      </div>
+
+      <!-- Left and right controls/icons -->
+      <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
+    </div>
   </section>
 
 
