--- a/secciones/noticias.html
+++ b/secciones/noticias.html
@@ -6,25 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../estilos/style.css">
+    <link rel="stylesheet" href="../estilos/estilos.css">
     <link rel="stylesheet" href="../estilos/mediastyle.css">
     <title>Old School Geek</title>
     <link rel="shortcut icon" href="../media/icons/favicon.png">
 </head>
 
-<body class="sections">
+<body>
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container-fluid">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="../index.html">Home</a>
+              <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../secciones/classics.html">Clásicos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../secciones/noticias.html">Noticias</a>
+              <a class="nav-link active" href="../secciones/noticias.html">Noticias</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../secciones/trailers.html">Trailers</a>
@@ -35,6 +35,10 @@
           </ul>
         </div>
       </nav>
+
+      <div class="container mt-3">
+        <img src="../media/icons/noticias.png" alt="noticias"  class="mx-auto d-block">
+      </div>
     <div class="mainst1">
         <h1>¡Actualidad para que no pierdas nada de vista!</h1><br>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique excepturi ratione minima nobis
