--- a/secciones/trailers.html
+++ b/secciones/trailers.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="descirption" content="Trailers Geek">
+  <meta name="keywords" content="trailers, adrenalina">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
     <link rel="stylesheet" href="../estilos/mediastyle.css">
-    <title>Trailers</title>
+    <title>Trailers Geek</title>
     <link rel="shortcut icon" href="../media/icons/favicon.png">
 </head>
 <body>
