--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/0e56d6f3ca.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./estilos/estilos.css">
     <link rel="shortcut icon" href="./media/icons/favicon.png">
-    <title>>Old School Geek</title>
+    <title>Old School Geek</title>
 </head>
 
 <body>
